--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/tailwindcss": "^5.3.1",
+    "@tailwindcss/forms": "^0.5.2",
     "eslint": "latest",
     "nuxt": "^3.0.0-rc.6"
   }
